# electronics_store

./: README.md  main.py  product_class.py  pyproject.toml
main_package/: exceptions.py  keyboard_class.py  main.py  mixin_lang_class.py  phone_class.py  product_class.py
test/: test_exceptions.py  test_items_2.csv  test_mixin_lang_class.py  test_phone_class.py  test_product_class.py
