[tool.poetry]
name = "poetry"
version = "0.1.0"
description = "poetry"
authors = ["marie-george"]
license = "none"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
